whereami-multi-cluster/manifests/asm-ingressgateway-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: asm-gateways
  labels:
    istio.io/rev: asm-managed
