whereami-multi-cluster/manifests/namespace-whereami.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: whereami
  labels:
    istio.io/rev: asm-managed
