whereami-multi-cluster/manifests/v1_service_whereami-backend.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: whereami-backend
  name: whereami-backend
  namespace: whereami
spec:
  ports:
  - name: http
    port: 80
    targetPort: 8080
  selector:
    app: whereami-backend
  type: ClusterIP
