whereami-multi-cluster/manifests/v1_service_whereami-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: whereami-frontend
  name: whereami-frontend
  namespace: whereami
spec:
  ports:
  - name: http
    port: 80
    targetPort: 8080
  selector:
    app: whereami-frontend
  type: ClusterIP
